# substrate-kitties

pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
