[package]
name = "pallet-kitties"
version = "0.1.0"
authors = ["edouard henriques iv (ediv)"]
edition = "2018"

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

# From lecture
# codec = {package = "parity-scale-codec", version="1.3.4", default-features = false}

[dependencies]
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
sp-io = { default-features = false, version = '2.0.1' }
pallet-randomness-collective-flip = { default-features = false, version = '2.0.1' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-io/std',
    'pallet-randomness-collective-flip/std',
]